--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tsigel/typed-events.git"
+    "url": "git+https://github.com/tsigel/typed-ts-events.git"
   },
   "keywords": [
     "typed",
