--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "prepare": "npm test && npm run build",
-    "build": "tsc && browserify -s events -o dist/events.js dist/index.js && uglifyjs dist/events.js -o dist/events.min.js",
+    "build": "tsc -p ./ && browserify -s events -o dist/events.js dist/index.js && uglifyjs dist/events.js -o dist/events.min.js",
     "preversion": "npm run test",
     "postversion": "npm publish",
     "prepublish": "npm run coveralls",
@@ -57,7 +57,7 @@
     "coveralls": "^3.0.2",
     "jest": "^24.1.0",
     "ts-jest": "^23.10.5",
-    "typescript": "^3.3.3",
+    "typescript": "^3.6.3",
     "uglify-js": "^3.4.9"
   }
 }
