--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,13 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "declaration": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "lib": ["es2015"]
   },
   "files": [
     "src/index.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
